--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Roboto:ital,wght@0,400;1,700&display=swap');
+
 body {
     margin: 0px;
     padding: 0px;
     text-decoration: none;
+    /*font-family: 'Baloo Bhaijaan 2', cursive;*/
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.wrapper {
+    display: flex;
+    background-color: lightgray;
+    width: 70vw;
+    height: 100vh;
+    margin: 0px auto;
+    justify-content: space-between;
+}
+
+.side-menu {
+    margin-top: 25px;
+    width: 132px;
+    height: 850px;
+    border-radius: 24px;
+    background-color: #0c0b0b;
+}
+
+.main-column {
+    width: 620px;
+    height: 100vh;
+    background-color: rgba(255, 0, 0, .1);
+}
+
+.right-column {
+    width: 440px;
+    height: 100vh;
+    background-color: rgba(255, 0, 0, .1);
 }
