--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Roboto:ital,wght@0,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400;600;800&family=Roboto:ital,wght@0,400;1,700&display=swap');
 
 body {
     margin: 0px;
@@ -8,33 +8,92 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 400;
+    background-color: #E5E5E5:
 }
 
 .wrapper {
     display: flex;
-    background-color: lightgray;
     width: 70vw;
-    height: 100vh;
+    height: 120vh;
     margin: 0px auto;
     justify-content: space-between;
 }
 
 .side-menu {
-    margin-top: 25px;
+    top: 40px;
+    position: sticky;
     width: 132px;
     height: 850px;
     border-radius: 24px;
     background-color: #0c0b0b;
+    color: white;
+}
+
+.logo {
+    margin-top: 20px;
+    display: block;
+    font-family: 'Baloo Bhaijaan 2', cursive;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 64px;
+    line-height: 102px;
+    text-align: center;
+}
+
+.menu__item {
+    margin: 0 auto;
+    margin-top: 50px;
+    width: 50px;
+    display: block;
+    text-align: center;
+}
+
+.menu__item:first-child {
+    margin-top: 75px;
+}
+
+.menu__item:last-child {
+    margin-top: 240px;
 }
 
 .main-column {
+    margin-top: 40px;
     width: 620px;
-    height: 100vh;
     background-color: rgba(255, 0, 0, .1);
 }
 
+.hello {
+    height: 160px;
+    background-color: #f5f5f7;
+    border-radius: 14px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    padding-left: 30px;
+}
+
+.hello__img {
+    position: absolute;
+    left: 340px;
+    bottom: 0px;
+}
+
+.hello h1 {
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Baloo Bhaijaan 2', cursive;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 36px;
+}
+
+.hello p {
+    margin: 0px;
+    padding: 0px;
+}
+
 .right-column {
+    margin-top: 40px;
     width: 440px;
-    height: 100vh;
     background-color: rgba(255, 0, 0, .1);
 }
