--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,10 @@ body {
     justify-content: space-between;
 }
 
+.clickable {
+    cursor: pointer;
+}
+
 .side-menu {
     top: 40px;
     position: sticky;
@@ -59,7 +63,7 @@ body {
 .main-column {
     margin-top: 40px;
     width: 620px;
-    background-color: rgba(255, 0, 0, .1);
+    /*background-color: rgba(255, 0, 0, .1);*/
 }
 
 .hello {
@@ -96,12 +100,13 @@ body {
     margin-top: 25px;
     height: 80px;
     display: flex;
+    align-items: center;
 }
 
 .course-card {
     background-color: #f5f5f7;
     border-radius: 14px;
-    width: 500px;
+    width: 480px;
     height: 80px;
     display: flex;
     align-items: center;
@@ -118,9 +123,12 @@ body {
 }
 
 .card__img img {
-    position: relative;
-    left: 16px;
-    top: 16px;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .card__disc {
@@ -144,7 +152,7 @@ body {
 
 .progress {
     text-align: center;
-    margin-left: 45px;
+    margin-left: 35px;
     line-height: 40px;
     height: 40px;
     width: 40px;
@@ -161,7 +169,33 @@ body {
     text-align: center;
     line-height: 40px;
     color: white;
-    margin-left: 40px;
+    margin-left: 30px;
+}
+
+
+
+.round {
+    margin-left: 20px;
+    height: 40px;
+    width: 40px;
+    display: inline-block;
+    border: #0c0b0b solid 3px;
+    border-radius: 50%;
+    position: relative;
+    
+}
+
+.round:last-child {
+    margin-left: 10px;
+}
+
+.round img {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .right-column {
