--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,35 @@ body {
     background-color: #E5E5E5:
 }
 
+h2 {
+    margin-top: 40px;
+    font-family: 'Baloo Bhaijaan 2', cursive;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 38px;
+}
+
+.btn {
+    height: 40px;
+    width: 120px;
+    border-radius: 8px;
+    margin-left: 30px;
+    text-align: center;
+    line-height: 40px;
+}
+
+.btn_black {
+    background-color: #0c0b0b;
+    color: white;
+}
+
+.btn_light {
+    background-color: transparent;
+    border: #0c0b0b solid 2px;
+    color: #0c0b0b;
+}
+
 .wrapper {
     display: flex;
     width: 70vw;
@@ -161,19 +190,6 @@ body {
     border-radius: 50%;
 }
 
-.btn_black {
-    height: 40px;
-    width: 120px;
-    background-color: #0c0b0b;
-    border-radius: 8px;
-    text-align: center;
-    line-height: 40px;
-    color: white;
-    margin-left: 30px;
-}
-
-
-
 .round {
     margin-left: 20px;
     height: 40px;
@@ -196,6 +212,60 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+li {
+    display: inline-block;
+    margin-right: 30px;
+}
+
+.courses-list {
+    list-style-type: none;
+    font-family: 'Baloo Bhaijaan 2', cursive;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 26px;
+    color: rgba(0, 0, 0, .3);
+}
+
+.active {
+    color: #0c0b0b;
+}
+
+.card__item {
+    margin-bottom: 16px;
+    height: 80px;
+    width: 620px;
+    background-color: #f5f5f7;
+    border-radius: 14px;
+    display: flex;
+    align-items: center;
+}
+
+.card__item:first-child {
+    margin-top: 10px;
+}
+
+.card__info {
+    margin-left: 40px;
+    font-size: 13px;
+    line-height: 16px;
+}
+
+.card__info:last-child {
+    margin-right: 100px;
+}
+
+.card__info img {
+    padding-right: 5px;
+    margin-bottom: -2px;
 }
 
 .right-column {
