--- a/src/style.css
+++ b/src/style.css
@@ -259,10 +259,6 @@ li {
     line-height: 16px;
 }
 
-.card__info:last-child {
-    margin-right: 100px;
-}
-
 .card__info img {
     padding-right: 5px;
     margin-bottom: -2px;
@@ -271,5 +267,58 @@ li {
 .right-column {
     margin-top: 40px;
     width: 440px;
-    background-color: rgba(255, 0, 0, .1);
+}
+
+.utility {
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search {
+    height: 40px;
+    width: 300px;
+    border-radius: 8px;
+    background-color: #E5E5E5;
+    display: flex;
+    align-content: center;
+}
+
+.search button {
+    background-color: transparent;
+    height: 40px;
+    width: 40px;
+    border: none;
+}
+
+.search input {
+    padding: 0px;
+    border: none;
+    height: 40px;
+    width: 260px;
+    background-color: #E5E5E5 ;
+}
+
+.profile {
+    display: flex;
+    align-content: center;
+}
+
+.more {
+    margin: 0 10px;
+}
+
+.course-info {
+    margin-top: 25px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.course-info__card {
+    display: inline-block;
+    height: 95px;
+    width: 208px;
+    background-color: #E5E5E5;
+    border-radius: 14px;
 }
